--- a/app.json
+++ b/app.json
@@ -1068,7 +1068,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 3216,
+            "viewCount": 3217,
             "likeCount": 87,
             "favoriteCount": 0,
             "commentCount": 3,
@@ -1579,7 +1579,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "4876",
+            "viewCount": "4877",
             "likeCount": "274",
             "favoriteCount": "0",
             "commentCount": "3",
@@ -1639,17 +1639,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "2374",
-            "likeCount": "72",
-            "favoriteCount": "0",
-            "commentCount": "0",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-02-02T15:54:55Z",
-                    "actualEndTime": "2022-02-02T18:18:04Z",
-                    "scheduledStartTime": "2022-02-02T16:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-07-03T12:52:26Z",
         "stargazers": 29,
