--- a/app.json
+++ b/app.json
@@ -1068,15 +1068,20 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "2119",
-            "likeCount": "48",
-            "favoriteCount": "0",
-            "commentCount": "2",
+            "viewCount": 3218,
+            "likeCount": 87,
+            "favoriteCount": 0,
+            "commentCount": 3,
             "liveStreamingDetails": [
                 {
                     "actualStartTime": "2022-02-15T16:04:54Z",
                     "actualEndTime": "2022-02-15T18:20:08Z",
                     "scheduledStartTime": "2022-02-15T16:00:00Z"
+                },
+                {
+                    "actualStartTime": "2021-05-11T15:59:53Z",
+                    "actualEndTime": "2021-05-11T18:08:15Z",
+                    "scheduledStartTime": "2021-05-11T16:00:00Z"
                 }
             ]
         },
@@ -1574,7 +1579,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "4877",
+            "viewCount": "4878",
             "likeCount": "274",
             "favoriteCount": "0",
             "commentCount": "3",
