--- a/app.json
+++ b/app.json
@@ -903,11 +903,17 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 0,
-            "likeCount": 0,
-            "dislikeCount": 0,
-            "favoriteCount": 0,
-            "commentCount": 0
+            "viewCount": "1739",
+            "likeCount": "90",
+            "favoriteCount": "0",
+            "commentCount": "1",
+            "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-08-31T14:57:25Z",
+                    "actualEndTime": "2022-08-31T17:22:42Z",
+                    "scheduledStartTime": "2022-08-31T15:00:00Z"
+                }
+            ]
         },
         "last_modified": "2023-02-09T16:59:36Z",
         "stargazers": 6,
@@ -1062,20 +1068,15 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 3218,
-            "likeCount": 87,
-            "favoriteCount": 0,
-            "commentCount": 3,
+            "viewCount": "2119",
+            "likeCount": "48",
+            "favoriteCount": "0",
+            "commentCount": "2",
             "liveStreamingDetails": [
                 {
                     "actualStartTime": "2022-02-15T16:04:54Z",
                     "actualEndTime": "2022-02-15T18:20:08Z",
                     "scheduledStartTime": "2022-02-15T16:00:00Z"
-                },
-                {
-                    "actualStartTime": "2021-05-11T15:59:53Z",
-                    "actualEndTime": "2021-05-11T18:08:15Z",
-                    "scheduledStartTime": "2021-05-11T16:00:00Z"
                 }
             ]
         },
