--- a/app.json
+++ b/app.json
@@ -903,7 +903,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1739",
+            "viewCount": "1740",
             "likeCount": "90",
             "favoriteCount": "0",
             "commentCount": "1",
@@ -1068,16 +1068,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 3218,
-            "likeCount": 87,
-            "favoriteCount": 0,
-            "commentCount": 3,
+            "viewCount": "1099",
+            "likeCount": "39",
+            "favoriteCount": "0",
+            "commentCount": "1",
             "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-02-15T16:04:54Z",
-                    "actualEndTime": "2022-02-15T18:20:08Z",
-                    "scheduledStartTime": "2022-02-15T16:00:00Z"
-                },
                 {
                     "actualStartTime": "2021-05-11T15:59:53Z",
                     "actualEndTime": "2021-05-11T18:08:15Z",
@@ -1639,7 +1634,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "2376",
+            "viewCount": "2377",
             "likeCount": "72",
             "favoriteCount": "0",
             "commentCount": "0",
