--- a/app.json
+++ b/app.json
@@ -671,17 +671,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1444",
-            "likeCount": "50",
-            "favoriteCount": "0",
-            "commentCount": "3",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-07-20T14:57:48Z",
-                    "actualEndTime": "2022-07-20T17:35:22Z",
-                    "scheduledStartTime": "2022-07-20T15:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-07-19T09:01:17Z",
         "stargazers": 19,
@@ -903,17 +897,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1740",
-            "likeCount": "90",
-            "favoriteCount": "0",
-            "commentCount": "1",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-08-31T14:57:25Z",
-                    "actualEndTime": "2022-08-31T17:22:42Z",
-                    "scheduledStartTime": "2022-08-31T15:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-02-09T16:59:36Z",
         "stargazers": 6,
@@ -1068,22 +1056,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 3219,
-            "likeCount": 87,
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
             "favoriteCount": 0,
-            "commentCount": 3,
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-02-15T16:04:54Z",
-                    "actualEndTime": "2022-02-15T18:20:08Z",
-                    "scheduledStartTime": "2022-02-15T16:00:00Z"
-                },
-                {
-                    "actualStartTime": "2021-05-11T15:59:53Z",
-                    "actualEndTime": "2021-05-11T18:08:15Z",
-                    "scheduledStartTime": "2021-05-11T16:00:00Z"
-                }
-            ]
+            "commentCount": 0
         },
         "last_modified": "2023-02-23T22:26:45Z",
         "stargazers": 15,
