--- a/app.json
+++ b/app.json
@@ -758,17 +758,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "831",
-            "likeCount": "29",
-            "favoriteCount": "0",
-            "commentCount": "0",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-08-10T14:54:50Z",
-                    "actualEndTime": "2022-08-10T17:11:57Z",
-                    "scheduledStartTime": "2022-08-10T15:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-01-25T17:48:55Z",
         "stargazers": 10,
@@ -1068,20 +1062,15 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 3225,
-            "likeCount": 87,
-            "favoriteCount": 0,
-            "commentCount": 3,
+            "viewCount": "2128",
+            "likeCount": "48",
+            "favoriteCount": "0",
+            "commentCount": "2",
             "liveStreamingDetails": [
                 {
                     "actualStartTime": "2022-02-15T16:04:54Z",
                     "actualEndTime": "2022-02-15T18:20:08Z",
                     "scheduledStartTime": "2022-02-15T16:00:00Z"
-                },
-                {
-                    "actualStartTime": "2021-05-11T15:59:53Z",
-                    "actualEndTime": "2021-05-11T18:08:15Z",
-                    "scheduledStartTime": "2021-05-11T16:00:00Z"
                 }
             ]
         },
@@ -1319,17 +1308,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1097",
-            "likeCount": "44",
-            "favoriteCount": "0",
-            "commentCount": "0",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-06-29T14:55:25Z",
-                    "actualEndTime": "2022-06-29T17:02:24Z",
-                    "scheduledStartTime": "2022-06-29T15:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-04-10T05:15:46Z",
         "stargazers": 78,
@@ -1579,7 +1562,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "4880",
+            "viewCount": "4881",
             "likeCount": "274",
             "favoriteCount": "0",
             "commentCount": "3",
@@ -1639,7 +1622,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "2380",
+            "viewCount": "2381",
             "likeCount": "72",
             "favoriteCount": "0",
             "commentCount": "0",
