--- a/app.json
+++ b/app.json
@@ -758,17 +758,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "835",
-            "likeCount": "29",
-            "favoriteCount": "0",
-            "commentCount": "0",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-08-10T14:54:50Z",
-                    "actualEndTime": "2022-08-10T17:11:57Z",
-                    "scheduledStartTime": "2022-08-10T15:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-01-25T17:48:55Z",
         "stargazers": 10,
@@ -1319,17 +1313,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "1097",
-            "likeCount": "44",
-            "favoriteCount": "0",
-            "commentCount": "0",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-06-29T14:55:25Z",
-                    "actualEndTime": "2022-06-29T17:02:24Z",
-                    "scheduledStartTime": "2022-06-29T15:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-04-10T05:15:46Z",
         "stargazers": 78,
@@ -1639,7 +1627,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "2385",
+            "viewCount": "2386",
             "likeCount": "72",
             "favoriteCount": "0",
             "commentCount": "0",
@@ -1691,8 +1679,8 @@
                 "https://www.mentimeter.com/app/folder/1973089"
             ]
         },
-        "last_modified": "2023-08-29T15:07:04Z",
-        "stargazers": 22,
+        "last_modified": "2023-09-21T05:10:50Z",
+        "stargazers": 23,
         "forks": 24,
         "description": "Clone of Good Reads using Spring and Cassandra",
         "reposlug": "datastaxdevs-workshop-betterreads"
