--- a/app.json
+++ b/app.json
@@ -1639,17 +1639,11 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "2389",
-            "likeCount": "72",
-            "favoriteCount": "0",
-            "commentCount": "0",
-            "liveStreamingDetails": [
-                {
-                    "actualStartTime": "2022-02-02T15:54:55Z",
-                    "actualEndTime": "2022-02-02T18:18:04Z",
-                    "scheduledStartTime": "2022-02-02T16:00:00Z"
-                }
-            ]
+            "viewCount": 0,
+            "likeCount": 0,
+            "dislikeCount": 0,
+            "favoriteCount": 0,
+            "commentCount": 0
         },
         "last_modified": "2023-09-14T12:01:09Z",
         "stargazers": 30,
