--- a/app.json
+++ b/app.json
@@ -758,11 +758,17 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 0,
-            "likeCount": 0,
-            "dislikeCount": 0,
-            "favoriteCount": 0,
-            "commentCount": 0
+            "viewCount": "835",
+            "likeCount": "29",
+            "favoriteCount": "0",
+            "commentCount": "0",
+            "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-08-10T14:54:50Z",
+                    "actualEndTime": "2022-08-10T17:11:57Z",
+                    "scheduledStartTime": "2022-08-10T15:00:00Z"
+                }
+            ]
         },
         "last_modified": "2023-01-25T17:48:55Z",
         "stargazers": 10,
@@ -1313,11 +1319,17 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": 0,
-            "likeCount": 0,
-            "dislikeCount": 0,
-            "favoriteCount": 0,
-            "commentCount": 0
+            "viewCount": "1097",
+            "likeCount": "44",
+            "favoriteCount": "0",
+            "commentCount": "0",
+            "liveStreamingDetails": [
+                {
+                    "actualStartTime": "2022-06-29T14:55:25Z",
+                    "actualEndTime": "2022-06-29T17:02:24Z",
+                    "scheduledStartTime": "2022-06-29T15:00:00Z"
+                }
+            ]
         },
         "last_modified": "2023-04-10T05:15:46Z",
         "stargazers": 78,
@@ -1567,7 +1579,7 @@
             ]
         },
         "youtube_statistics": {
-            "viewCount": "4882",
+            "viewCount": "4883",
             "likeCount": "274",
             "favoriteCount": "0",
             "commentCount": "3",
